feat: self-update from the web interface
